--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "devDependencies": {
     "@types/bun": "^1.0.10",
+    "@types/cli-progress": "^3.11.5",
     "@types/fluent-ffmpeg": "^2.1.24"
   },
   "peerDependencies": {
@@ -11,6 +12,7 @@
   },
   "dependencies": {
     "@types/node": "^20.11.30",
+    "cli-progress": "^3.12.0",
     "colors": "^1.4.0",
     "fluent-ffmpeg": "^2.1.2"
   }
