--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "scr2",
-  "module": "index.ts",
+  "name": "ffjam",
+  "module": "src/main.ts",
   "type": "module",
-  "devDependencies": {
-    "@types/bun": "^1.0.10",
-    "@types/cli-progress": "^3.11.5",
-    "@types/fluent-ffmpeg": "^2.1.24"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "scripts": {
+    "bld" : "./scripts/compile.sh",
+    "dev": "bun run --hot src/main.ts"
   },
   "dependencies": {
     "@types/node": "^20.11.30",
     "cli-progress": "^3.12.0",
     "colors": "^1.4.0",
+    "consola": "^3.2.3",
     "fluent-ffmpeg": "^2.1.2"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.0.10",
+    "@types/cli-progress": "^3.11.5",
+    "@types/fluent-ffmpeg": "^2.1.24",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.3"
   }
 }
