--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "module": "src/main.ts",
   "type": "module",
   "scripts": {
-    "bld": "./scripts/compile.sh",
+    "build": "./scripts/compile.sh",
     "dev": "bun run ./src/main.ts",
     "bin": "./bin/ffj"
   },
